# Diabetes-Risk-Predictor

./: .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  TODO.md  config.yaml  predict.py  preprocess_eeg.py  pyproject.toml  requirements.txt  tune.py  visualize_results.py  workload_pipeline.py
.github/workflows/: ci.yml
Documents/Claude Projects/cash/.claude/: launch.json
Documents/Claude Projects/cash/heatpumpmatch-uk/: package-lock.json  package.json
Documents/Claude Projects/cash/heatpumpmatch-uk/.claude/: launch.json
Documents/Claude Projects/cash/heatpumpmatch-uk/src/app/: globals.css  layout.tsx  page.tsx
Documents/Claude Projects/cash/heatpumpmatch-uk/src/app/grant-checker/: page.tsx
Documents/Claude Projects/cash/heatpumpmatch-uk/src/app/installers/: page.tsx
Documents/Claude Projects/cash/heatpumpmatch-uk/src/app/login/: page.tsx
Documents/Claude Projects/cash/heatpumpmatch-uk/src/app/pricing/: page.tsx
Documents/Claude Projects/cash/heatpumpmatch-uk/src/app/privacy/: page.tsx
Documents/Claude Projects/cash/heatpumpmatch-uk/src/app/signup/: page.tsx
Documents/Claude Projects/cash/heatpumpmatch-uk/src/components/: cookie-banner.tsx  footer.tsx  installer-card.tsx  navbar.tsx  search-bar.tsx
api/: main.py  schemas.py
docs/: index.html  model.json  privacy.html  terms.html
scripts/: train_enhanced.py  train_pima.py
src/: config.py  models.py  predict.py  preprocessing.py  train.py
tests/: test_api.py  test_loader.py  test_models.py  test_preprocessing.py
(+2 files in other folders)
