[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-workload"
version = "0.1.0"
description = "EEG mental workload classification (LR + CNN)"
authors = [{name = "Yunus Alade Omofowobi"}]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "scikit-learn>=1.2",
  "tensorflow>=2.12",
  "joblib>=1.3",
  "optuna>=3.5",
  "mlflow>=2.8",
  "PyYAML>=6.0",
  "mne>=1.6",
]

[tool.setuptools]
packages = []
